--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "react-native-scheme",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://github.com/xuyazhong/react-native-scheme",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,9 +11,13 @@
   "keywords": [
     "react-native"
   ],
-  "author": "",
-  "license": "",
-  "peerDependencies": {
-    "react-native": "^0.41.2"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xuyazhong/react-native-scheme.git"
+  },
+  "bugs": {
+    "url": "https://github.com/xuyazhong/react-native-scheme/issues"
+  },
+  "author": "xuyazhong",
+  "license": "ISC"
 }
